<?xml version="1.0" encoding="utf-8"?>
<com.example.videopalyer.widget.ResideLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.MainActivity">
    <LinearLayout
        android:paddingLeft="30dp"
        android:orientation="vertical"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/wallpaper_6">
        <ImageView
            android:src="@mipmap/bad"
            android:layout_marginTop="@dimen/dp_50"
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/download"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/line_brower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/history"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/line_brower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/movie"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/hot_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/share"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/more"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img"
                android:src="@mipmap/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="23C"
                android:id="@+id/film"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                android:layout_toRightOf="@id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="运城市"
                android:layout_below="@id/film"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                android:layout_toRightOf="@id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/dp_150"
                android:id="@+id/about"
                android:layout_below="@id/img"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/white"
                android:drawableLeft="@mipmap/about"
                android:text="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/dp_150"
                android:layout_marginLeft="@dimen/dp_30"
                android:id="@+id/theme"
                android:layout_toRightOf="@id/about"
                android:layout_below="@id/img"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/white"
                android:drawableLeft="@mipmap/them"
                android:text="@string/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.videopalyer.widget.CustomTextView
                android:id="@+id/tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="20dp"
                android:text="Wednesday" />
            <com.example.videopalyer.widget.CustomTextView
                android:id="@+id/ctv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="dasc" />
            <ImageButton
                android:id="@+id/ibt_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:background="@null"
                android:src="@mipmap/ic_action_focus" />
        </android.support.v7.widget.Toolbar>
        <View
            android:layout_below="@id/toolbar"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <com.example.videopalyer.widget.CustomViewPager
            android:id="@+id/cvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tab"
            android:layout_below="@id/toolbar"></com.example.videopalyer.widget.CustomViewPager>
        <android.support.design.widget.TabLayout
            app:tabIndicatorHeight="@dimen/dp_0"
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:tabMode="fixed"></android.support.design.widget.TabLayout>
    </RelativeLayout>
</com.example.videopalyer.widget.ResideLayout>